# pet

new_poj/: .gitignore  Docker-compose.yml  Dockerfile  README.md  database.db  pyproject.toml  requirements.txt  sads.py
new_poj/src/app/: main.py
new_poj/src/app/config/: config.py  database.py  redis_client.py
new_poj/src/app/integrations/: get_rate.py  get_rate_dollar.py
new_poj/src/app/logic/: calc.py
new_poj/src/app/models/: models.py
new_poj/src/app/pages/: router.py
new_poj/src/app/repository/: orm.py  repository.py
new_poj/src/app/router/: router.py
new_poj/src/app/schemas/: schemas.py
new_poj/src/app/static/: styles.css
new_poj/src/app/templates/: base.html  getall.html  home.html  id.html  registration.html
new_poj/src/app/worker/: celery_config.py  tasks.py
new_poj/src/tests/: test_api.py  test_calc.py
